--- a/package.json
+++ b/package.json
@@ -1,24 +1,44 @@
 {
-  "name": "task-management-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "typescript": "^5"
-  }
+    "name": "task-board",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/cache": "^11.11.0",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@fontsource/roboto": "^5.0.13",
+        "@fortawesome/fontawesome-svg-core": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.5.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "@hello-pangea/dnd": "^16.6.0",
+        "@mantine/hooks": "^7.9.2",
+        "@mui/material": "^5.15.18",
+        "@mui/material-nextjs": "^5.15.11",
+        "@prisma/client": "^5.14.0",
+        "@tanstack/react-query": "^5.37.1",
+        "axios": "^1.7.2",
+        "clsx": "^2.1.1",
+        "firebase": "^10.12.1",
+        "lodash": "^4.17.21",
+        "next": "14.2.3",
+        "react": "^18",
+        "react-dom": "^18",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/lodash": "^4",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.3",
+        "prisma": "^5.14.0",
+        "typescript": "^5"
+    }
 }
