--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "noEmit": true,
         "esModuleInterop": true,
         "module": "esnext",
+        "target": "esnext",
         "moduleResolution": "bundler",
         "resolveJsonModule": true,
         "isolatedModules": true,
@@ -31,8 +32,8 @@
         "next-env.d.ts",
         "**/*.ts",
         "**/*.tsx",
-        ".next/types/**/*.ts"
-, "bulk.js"    ],
+        ".next/types/**/*.ts",
+    ],
     "exclude": [
         "node_modules"
     ]
