--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "lodash": "^4.17.21",
         "next": "14.2.3",
         "nodemailer": "^6.9.14",
+        "pusher": "^5.2.0",
+        "pusher-js": "^8.4.0-rc2",
         "react": "^18",
         "react-dom": "^18",
         "react-transition-group": "^4.4.5",
