--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-transition-group": "^4.4.5",
         "server-only": "^0.0.1",
         "set-cookie-parser": "^2.6.0",
+        "sharp": "^0.33.4",
         "zod": "^3.23.8"
     },
     "devDependencies": {
