--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "@react-email/components": "0.0.21",
         "@tanstack/react-query": "^5.37.1",
         "axios": "^1.7.2",
-        "bson-objectid": "^2.0.4",
+        "bson": "./bson",
         "client-only": "^0.0.1",
         "clsx": "^2.1.1",
         "google-auth-library": "^9.11.0",
