--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@mantine/hooks": "^7.9.2",
         "@mui/material": "^5.15.18",
         "@mui/material-nextjs": "^5.15.11",
+        "@mui/x-date-pickers": "^7.12.0",
         "@prisma/client": "^5.16.0",
         "@react-email/components": "0.0.21",
         "@tanstack/react-query": "^5.37.1",
@@ -28,6 +29,7 @@
         "bson": "./bson",
         "client-only": "^0.0.1",
         "clsx": "^2.1.1",
+        "dayjs": "^1.11.12",
         "google-auth-library": "^9.11.0",
         "html2canvas": "^1.4.1",
         "lodash": "^4.17.21",
