--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "@prisma/client": "^5.16.0",
         "@react-email/components": "0.0.21",
         "@tanstack/react-query": "^5.37.1",
+        "@vercel/analytics": "^1.3.1",
+        "@vercel/speed-insights": "^1.0.12",
         "axios": "^1.7.2",
         "bson": "./bson",
         "client-only": "^0.0.1",
