--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "@mui/material-nextjs": "^5.15.11",
         "@mui/x-date-pickers": "^7.12.0",
         "@prisma/client": "^5.16.0",
-        "@react-email/components": "0.0.21",
+        "@react-email/components": "0.0.22",
+        "@react-email/render": "0.0.17",
         "@tanstack/react-query": "^5.37.1",
         "@vercel/analytics": "^1.3.1",
         "@vercel/speed-insights": "^1.0.12",
